# EEP

./: .gitattributes  .gitignore  README.md  Shame!.md
8051/: .gitignore  Test1.asm  Test2.asm
8051/Exam/: Exam.mcu8051ide  Exam1.asm  Exam1Keypad.vhc  Exam1LEDPanel.vhc  Exam2.asm
8051/Playground/: KeyPad1.vhc  KeyPad2.vhc  LEDDisplay.vhc  Playground.mcu8051ide  pg1.asm  pg2.asm  pg3.asm  pg4.asm  pg5.asm
8051/Practice1/: Practice1.mcu8051ide  main1.asm  main2.asm
8051/Practice2/: Practice2.mcu8051ide  main2.asm  main3.asm  main4.asm
8051/Practice3/: Practice3.mcu8051ide  main1.asm  main2.asm
Arduino/2018/: aerobarco.ino  controlador.ino
Arduino/2019/: 02-SOS.ino  03-SemaforoUmaFase.ino  04-SemaforoQuatroSensores.ino  05-Semaforo.ino  06-SemaforoOitoSensores.ino
Arduino/2021/: projsistemb.ino  sistemb1.ino
Assembly/2018/: hello.c  hello.s
Bash/2018/: Notes.md
C#/2019/: OneRingToRuleThemAll.cs
C#/2020/: Color.cs
C++/2017/: PeriodicTable.cpp
C++/2018/: SinglyLinkedList.cpp  SinglyLinkedList.h  StackSmashing.cpp  bitwise.cpp  inheritance.cpp  m_inheritance.cpp  main.cpp  smart_ptr.cpp  xor.cpp
C++/2019/: remove_space.cpp
C++/2021/: poly.cpp  ref.cpp  template.cpp
C++/DataStructures/: DataStructures.sln
C++/Udemy/: CppClass.cpp  args.cpp  const.cpp  exception.cpp  file_io.cpp  friend.cpp  inline.cpp  oper_overload.cpp  optional_param.cpp  setw.cpp  stack.cpp  string.cpp  struct_in_struct.cpp  udemy.txt  vector.cpp  ymedu.txt
C/2017/: ackermann.c
C/2018/: LeroLero.txt  StringDynamicArray.c  fastPI.c  fodase.c  free.c  hash_void.c  limits.c  log_malloc.c  sykes2.c  turtoise.c
C/2019/: anonym.c  asserts.c  endian.c  foreach.c  hash_table_primes.c  parithm.c  polymorphism.c  ret_func.c  retif.c  super_fast_sieve.c  swap.c  thread.c  var_args.c
C/C Compilation and Makefiles/: C-Data-Structures-Algorithms.c  C_Compilation_Makefiles.md  Makefile
C/Data Structures/: CMakeLists.txt  README.md  ReturnCodes.md  main.c
C/Data Structures/headers/: IntegerStaticArray.h  SSLL.h  SinglyLinkedList.h  StaticArray.h  utility.h
C/Data Structures/readme/: IntegerStaticArray.md  SimpleSinglyLinkedList.md  SinglyLinkedList.md  StaticArray.md
C/Data Structures/structures/: IntegerStaticArray.c  SimpleSinglyLinkedList.c  SinglyLinkedList.c  StaticArray.c
C/Data Structures/util/: raise.c  utility.c
C/Estrutura de Dados/: array.c  cast.c  malloc.c  pDpDpDp.c  pointerStringConcatenate.c  pointers.c
Dart/2019/: Complex.dart  numbers.dart
DataStructures/: DataStructureFunctions.md  DataStructures.sln  ReadFurther.md  TODO.md
DataStructures/DataStructures/: DataStructures.cpp  DataStructures.vcxproj  DataStructures.vcxproj.filters  Instructions.md  README.md  stdafx.h
DataStructures/Debug/: DataStructures.ilk
DataStructures/DirectoryManager/: DirectoryManager.vcxproj  Main.c  (+1 more)
Go/2019/: restapi.go  (+1 more)
Matlab/: intro.m
Others/: cmd_wave.cmd
Rust/2020/actix/: .env  Cargo.toml  README.md  diesel.toml
Rust/2020/actix/examples/: Actix.postman_collection.json
Rust/2020/actix/migrations/2020-04-24-222344_create_messages/: down.sql  up.sql
Rust/2020/actix/src/: main.rs  model.rs  routes.rs
Rust/2020/actix/src/actor/: db.rs  mod.rs  session.rs  ws.rs
Rust/2020/crud/: .env  Cargo.toml  README.md
Rust/2020/crud/examples/: Rust CRUD.postman_collection.json
Rust/2020/crud/migrations/2020-03-27-171805_books/: down.sql  up.sql
Rust/2020/crud/public/: 404.html  index.html
Rust/2020/crud/src/: db.rs  main.rs  models.rs  routes.rs
Rust/2020/rocket_example/: Cargo.toml
Rust/2020/rocket_example/src/: main.rs
Rust/2020/wasm/: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
Rust/2020/wasm/src/: lib.rs
Rust/2021/dir_size/: Cargo.toml
Rust/2021/dir_size/src/: main.rs
SQL/: Estudos.txt
(+986 files in other folders)
