[package]
name = "actix"
version = "0.1.0"
authors = ["Leonardo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.7.4"
actix-web = "0.7.8"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.3.3", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.13.0"
failure = "0.1.2"
futures = "0.1"
r2d2 = "0.8.2"
serde_derive = "1.0.79"
serde_json = "1.0"
serde = "1.0"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
