[package]
name = "crud"
version = "0.1.0"
authors = ["Leonardo <lvenk26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"

serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"

rocket = "0.4.4"
rocket_codegen = "0.4.4"
rocket_contrib = { version = "0.4.4", default-features = false, features = ["json"]}
