[package]
name = "rocket_example"
version = "0.1.0"
authors = ["Leonardo Vencovsky"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"

rocket = "0.4.4"
rocket_codegen = "0.4.4"
rocket_contrib = "0.4.4"
