[package]
name = "wasm"
version = "0.1.0"
authors = ["Leonardo <lvenk26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.11"

[profile.release]
lto = true

[profile.dev]
lto = true
opt-level = 3
