[package]
name = "dir_size"
description = "Calculates the size of a folder in disk."
version = "0.1.0"
authors = ["Leonardo Vencovsky <leonardo.vencovsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humansize = "1"
